--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
         <header align="center">Salary Calculator</header>
 
-        <h1>Add Employee</h1>
+        <h1>Add Employee:</h1>
 
-        <form onSubmit="addEmployees(event)" id="emp-info">
+        <form align=center onSubmit="addEmployees(event)" id="emp-info">
             <input id="f-name" type="text" placeholder="First Name">
             <input id="l-name" type="text" placeholder="Last Name">
             <input id="emp-id" type="text" placeholder="Employee ID">
@@ -28,9 +28,10 @@
                   <th>Employee ID</th>
                   <th>Job Title</th>
                   <th>Annual Salary</th>
+                  <th></th>
                 </tr>
               </thead>
-              
+
         </table>
     
 </body>
