successful creation of function

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input id="l-name" type="text" placeholder="Last Name">
             <input id="emp-id" type="text" placeholder="Employee ID">
             <input id="job-title" type="text"  placeholder="Job Title">
-            <input id="salary" type="text" placeholder="Annual Salary">
+            <input id="salary" type="number" placeholder="Annual Salary">
             <button id="emp-submit">Submit</button>
         </form>
 
@@ -33,6 +33,6 @@
               </thead>
 
         </table>
-    
+        <h2 id="total-monthly">Total Monthly: $0</h2>
 </body>
 </html>
