created function for deleting row in table

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
               </thead>
 
         </table>
-        <h2 id="total-monthly">Total Monthly:<strong id="bold"> $0</strong></h2>
+        <h2 id="total-monthly">Total Monthly:$0</h2>
 </body>
 </html>
