base assignment done

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                   <th></th>
                 </tr>
               </thead>
-
         </table>
-        <h2 id="total-monthly">Total Monthly:$0</h2>
+        <h2 id="total-monthly"><span>Total Monthly:$0</span></h2>
 </body>
 </html>
